# loan-defaulter-project

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements-api.txt
.dvc/: config
.github/workflows/: train_eval.yml
api/: main.py
data/processed/: .gitignore  features.csv.dvc  features.parquet.dvc
feature_store/loan_features/feature_repo/: feature_definitions.py  feature_store.yaml
feature_store/loan_features/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
k8s/: deployment.yaml
models/: feature_columns.pkl  model.pkl  preprocessor.pkl
notebooks/: 01_eda.ipynb
reports/: metrics.json
src/: check_env.py  download_data.py  fetch_features.py  preprocess.py  train_eval.py
